# readvideo

./: .gitignore  pyproject.toml
claudedocs/: README.md  absolute_imports_implementation.md  api_reference.md  architectural_analysis_report.md  improvement_summary.md  less_is_more_summary.md  project_index.md  system_architecture_analysis.md  utils_cleanup_summary.md
src/readvideo/: __init__.py  __main__.py  cli.py  exceptions.py
src/readvideo/core/: audio_processor.py  supadata_fetcher.py  transcript_fetcher.py  whisper_wrapper.py
src/readvideo/user_content/: __init__.py  bilibili_user.py  design.md  utils.py  youtube_design.md  youtube_user.py
src/readvideo/user_content/twitter/: __init__.py  rss_fetcher.py  twitter_handler.py  utils.py
src/readvideo/utils/: __init__.py
