[project]
name = "readvideo"
version = "0.1.1"
description = "A Python tool for downloading and transcribing videos from YouTube/Bilibili and local media files"
readme = "README.md"
authors = [
    { name = "Jiahao Luo", email = "luoshitou9@gmail.com" }
]
license = { text = "MIT" }
keywords = ["video", "transcription", "youtube", "bilibili", "audio", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.12.30",
    "click>=8.1.0",
    "rich>=13.0.0",
    "browser-cookie3>=0.19.0",
    "tenacity>=8.2.0",
    "bilibili-api-python>=17.0.0",
    "httpx>=0.28.1",
    "curl-cffi>=0.13.0",
    "defusedxml>=0.7.1",
    "ffmpeg-python>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/learnerLj/readvideo"
Repository = "https://github.com/learnerLj/readvideo"
Issues = "https://github.com/learnerLj/readvideo/issues"

[project.scripts]
readvideo = "readvideo.cli:cli"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "types-defusedxml>=0.7.0.20250822",
    "types-requests>=2.32.4.20250809",
]
